# cgm-fileindex

./: .gitignore  indexer.ts  threadpool.ts  threadqueue.ts  threadworker.ts  watcher.ts
rust/: Cargo.toml
rust-meilisearch/: Cargo.toml
rust-meilisearch/src/: main.rs
rust/src/: lib.rs  req.rs
threading/: asyncpool.ts  deprecated_threadpool.ts  node_threadworker.ts  threadplanning.ts  threadtest.ts
workers/: count_worker.ts  docx_worker.ts  http_worker.ts  pdf_worker.ts  utf8_worker.ts  xlsx_worker.ts
