[package]
name = "parseDocx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "parse"
crate-type = ["cdylib"]

[dependencies]
pdf-extract = "0.6.4"
dotext = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }